Fri Nov 14 10:23:35 2014  Eric Wong  <e@80x24.org>

	* vm_eval.c (rb_eval_cmd): use pre-defined idCall

Fri Nov 14 09:25:44 2014  Eric Wong  <e@80x24.org>

	* vm_eval.c (rb_yield_splat): add missing GC guard
	  [Bug #10509]

Fri Nov 14 08:12:40 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* gc.c: fix build error caused by implicit conversion with clang.

Fri Nov 14 06:54:06 2014  Eric Wong  <e@80x24.org>

	* insns.def (opt_succ): remove Time#succ optimization
	  [Feature #10501]

Fri Nov 14 05:29:46 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c: refactoring.

	* gc.c: use GC_ENABLE_INCREMENTAL_MARK instead of USE_RINCGC.

	* gc.c (gc_start): check FORCE_MAJOR_GC.

Fri Nov 14 04:51:18 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c: Tuning RincGC parameters.

	  Before this patch, gc_marks_step() marks (white -> grey) fixed
	  number objects. However, this strategy does not fit practical
	  cases, for example too slow to make progres.

	  This patch changes this strategy how many objects the
	  gc_marks_step() should handle.

	  We can estimate how many times gc_marks_step() is called during
	  this major marking (== C) with the free slot number in pooled
	  pages. We also can estimate the living object number (== L)
	  using last marked_slots value. We can solve this problem (how
	  many objects should be process in gc_marks_step()) by L/C.

	* gc.c (rb_objspace_t): add rb_objspace_t::rincgc::pooled_sltos and
	  step_slots.

Fri Nov 14 01:26:47 2014  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb (search_response): parse MODSEQ in SEARCH
	  responses properly.  [ruby-core:64203] [Bug #10112]

Fri Nov 14 01:03:17 2014  Tanaka Akira  <akr@fsij.org>

	* test/lib/envutil.rb: Moved from test/ruby/.

	* test/lib/find_executable.rb: Ditto.

	* test/lib/memory_status.rb: Ditto.

	* test/lib/test/unit.rb: require envutil.

	* test/: Don't require envutil in test files.

Thu Nov 13 21:59:58 2014  CHIKANAGA Tomoyuki  <nagachika@ruby-lang.org>
